4월 11일 공유버젼
세부 내용, gmail 계정으로 4월 11일 발송한 메일 참고

--- a/IntelligentGallery/app/src/main/res/layout/activity_search_result.xml
+++ b/IntelligentGallery/app/src/main/res/layout/activity_search_result.xml
@@ -27,7 +27,9 @@
                     android:layout_marginLeft="@dimen/dp_10"
                     android:text="키워드 검색 결과"
                     android:textColor="@color/colorMajorText"
-                    android:textSize="@dimen/abc_text_size_medium_material" />
+                    android:textSize="@dimen/abc_text_size_medium_material"
+                    android:focusableInTouchMode="true"
+                    android:focusable="true"/>
 
 
                 <TextView
