--- a/IntelligentGallery/app/src/main/res/layout/dial_renaming.xml
+++ b/IntelligentGallery/app/src/main/res/layout/dial_renaming.xml
@@ -33,6 +33,7 @@
             android:lineSpacingExtra="@dimen/dp_5"
             android:singleLine="true"
             android:textColor="@color/c_ff7d7a85"
+            android:textCursorDrawable="@null"
             android:textSize="@dimen/dp_16"/>
 
         <!--<kr.ac.korea.intelligentgallery.common.view.textview.TextViewNotoSansCJKkrRegular-->
