--- a/IntelligentGallery/app/src/main/res/layout/item_list_folder.xml
+++ b/IntelligentGallery/app/src/main/res/layout/item_list_folder.xml
@@ -34,14 +34,15 @@
 
         <TextView
             android:id="@+id/item_list_folder_name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_7"
             android:layout_marginBottom="@dimen/dp_6"
-            android:ellipsize="start"
-            android:singleLine="false"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:text="폴더 이름"
-            android:textColor="@color/colorLigntGray" />
+            android:textColor="@color/colorLigntGray"
+            android:layout_weight="1" />
 
         <TextView
             android:id="@+id/left_parentheses"
@@ -51,7 +52,7 @@
             android:layout_marginBottom="@dimen/dp_6"
             android:singleLine="false"
             android:text="("
-            android:textColor="@color/colorLigntGray" />
+            android:textColor="@color/colorLigntGray"/>
 
         <TextView
             android:id="@+id/item_list_file_count"
@@ -61,7 +62,7 @@
             android:ellipsize="start"
             android:singleLine="false"
             android:text="11"
-            android:textColor="@color/colorLigntGray" />
+            android:textColor="@color/colorLigntGray"/>
 
         <TextView
             android:id="@+id/right_parentheses"
@@ -70,6 +71,7 @@
             android:layout_marginBottom="@dimen/dp_6"
             android:singleLine="false"
             android:text=")"
+            android:paddingRight="@dimen/dp_5"
             android:textColor="@color/colorLigntGray" />
     </LinearLayout>
 
