4/14 모든 기능 완료된 버젼
모든 기능 완료

--- a/IntelligentGallery/app/src/main/res/menu/menu_folder.xml
+++ b/IntelligentGallery/app/src/main/res/menu/menu_folder.xml
@@ -41,14 +41,15 @@
                 android:title="@string/action_arranging_orderby_data" />
         </menu>
     </item>
-    <item
-        android:id="@+id/action_concealing"
-        android:orderInCategory="100"
-        android:title="@string/action_concealing"
-        app:showAsAction="never" />
+
     <item
         android:id="@+id/action_renaming"
         android:orderInCategory="100"
         android:title="@string/action_renaming"
         app:showAsAction="never" />
 </menu>
+<!--<item-->
+<!--android:id="@+id/action_concealing"-->
+<!--android:orderInCategory="100"-->
+<!--android:title="@string/action_concealing"-->
+<!--app:showAsAction="never" />-->
